--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.298
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+==========================
 Changes in version 1.0.297
 ==========================
 
