--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,7 +19,7 @@ Mishandled or unimplemented features
 - Use a more proper method of suppressing first-reference-note-number
   on parallel cites.
 
-- Add rule and title and statute and locator label terms.
+- Add rule and title to statute and locator label terms.
 
 ==========================
 Changes in version 1.0.320
