--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.342
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Prevent empty multi-form variables from throwing
+  empty objects on to the output queue.
+
+
+==========================
 Changes in version 1.0.341
 ==========================
 
