--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.347
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Fix a syntax typo that apparently broke the processor
+  in IE7. Thanks to Adam Vessey for the patch.
+
+
+==========================
 Changes in version 1.0.346
 ==========================
 
