--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,16 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.348
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Preserve multi segment when cloning name objects.
+
+==========================
 Changes in version 1.0.347
 ==========================
 
